[gd_scene load_steps=13 format=3 uid="uid://cviq3h752k36a"]

[ext_resource type="Texture2D" uid="uid://c5sie4x1nelwx" path="res://addons/Tiny Swords/UI/Ribbons/Ribbon_Red_3Slides.png" id="1_g14tc"]
[ext_resource type="Script" path="res://UI/game_over_ui.gd" id="1_sd5t7"]
[ext_resource type="Texture2D" uid="uid://rv27mmhplaa7" path="res://addons/Tiny Swords/UI/Banners/Banner_Horizontal.png" id="2_lx4t0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ycsxd"]
texture = ExtResource("1_g14tc")
texture_margin_left = 48.0
texture_margin_top = 16.0
texture_margin_right = 48.0
texture_margin_bottom = 32.0

[sub_resource type="SystemFont" id="SystemFont_dgtyk"]
font_names = PackedStringArray("Pokemon Solid")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_q0d0o"]
font = SubResource("SystemFont_dgtyk")
font_size = 48
font_color = Color(0.458824, 0.0196078, 0.054902, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 0.909804)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sr7e2"]
texture = ExtResource("2_lx4t0")
texture_margin_left = 96.0
texture_margin_top = 16.0
texture_margin_right = 96.0
texture_margin_bottom = 48.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 48, 128, 128)

[sub_resource type="SystemFont" id="SystemFont_287qm"]
font_names = PackedStringArray("Comic Sans MS")
font_weight = 999
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_oudkq"]
font = SubResource("SystemFont_287qm")
font_size = 24
font_color = Color(0, 0, 0, 0.662745)

[sub_resource type="Animation" id="Animation_isowy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.647059)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(322, 50)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(155, 300)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Background:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_hp7c8"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [Color(0, 0, 0, 0.196078), Color(0, 0, 0, 0.784314)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(322, -100), Vector2(322, 75)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(2.46229, 1),
"update": 0,
"values": [Vector2(155, 700), Vector2(155, 350)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o1rm4"]
_data = {
"RESET": SubResource("Animation_isowy"),
"default": SubResource("Animation_hp7c8")
}

[node name="GameOverUI" type="CanvasLayer"]
script = ExtResource("1_sd5t7")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.647059)

[node name="TopPanel" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -254.0
offset_top = 50.0
offset_right = 254.0
offset_bottom = 153.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ycsxd")

[node name="GameOverLabel" type="Label" parent="TopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -13.0
offset_right = 43.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_q0d0o")

[node name="BottomPanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -421.0
offset_top = -24.0
offset_right = 421.0
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_sr7e2")

[node name="CenterContainer" type="CenterContainer" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -277.5
offset_top = -106.0
offset_right = 277.5
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="BottomPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 75
theme_override_constants/v_separation = 15
columns = 2

[node name="TimeSurvived" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "TimeSurvived:"
label_settings = SubResource("LabelSettings_oudkq")

[node name="TimeLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "20:50"
label_settings = SubResource("LabelSettings_oudkq")

[node name="MonsterDefeated" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Carnes Obtidas:"
label_settings = SubResource("LabelSettings_oudkq")

[node name="MonsterLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1234"
label_settings = SubResource("LabelSettings_oudkq")

[node name="GoldEaner" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Gold:
"
label_settings = SubResource("LabelSettings_oudkq")

[node name="GoldLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "300
"
label_settings = SubResource("LabelSettings_oudkq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
libraries = {
"": SubResource("AnimationLibrary_o1rm4")
}
